--- a/src/NotificationService/Configuration/Settings/appsettings.Development.json
+++ b/src/NotificationService/Configuration/Settings/appsettings.Development.json
@@ -7,11 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=localhost; Database=MLEOrderDb; Username=postgres; Password=postgres"
   },
   "MessagingQueue": {
     "Uri": "rabbitmq://localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "RedisCache": {
+    "ConnectionString": "localhost:6379"
+  },
+  "Swagger": {
+    "Enabled": true
   }
+
 }
