--- a/src/MLE.IntegrationHandler/MLE.IntegrationHandler.csproj
+++ b/src/MLE.IntegrationHandler/MLE.IntegrationHandler.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MassTransit" Version="8.3.6" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.2" />
+    </ItemGroup>
+
 </Project>
